--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,18 @@
-{{!-- The following component displays Ember's default welcome message. --}}
-{{welcome-page}}
-{{!-- Feel free to remove this! --}}
+{{!-- header and nav here --}}
+<nav>
+    <h3>These Knucks</h3>
+    <a>My Saved Knucks</a>
+    <a>Top Rated</a>
+</nav>
 
-{{outlet}}
+<body>
+    {{outlet}}
+</body>
+
+{{!-- footer --}}
+<footer>
+    <p>Made by Dr. CamCamBoBam</p>
+    <button>Instagram</button>
+    <button>Email</button>
+
+</footer>
