--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,8 +1,8 @@
 {{!-- header and nav here --}}
 <nav>
-    <h3>These Knucks</h3>
-    <a>My Saved Knucks</a>
-    <a>Top Rated</a>
+    <h3 class="header-items">These Knucks</h3>
+    <a class="header-items">My Saved Knucks</a>
+    <a class="header-items">Top Rated Knucks</a>
 </nav>
 
 <body>
@@ -11,8 +11,8 @@
 
 {{!-- footer --}}
 <footer>
-    <p>Made by Dr. CamCamBoBam</p>
-    <button>Instagram</button>
-    <button>Email</button>
+    <p class="footer-items">Made by Dr. CamCamBoBam</p>
+    <button class="footer-items">Instagram</button>
+    <button class="footer-items">Email</button>
 
 </footer>
