--- a/app/templates/knucks.hbs
+++ b/app/templates/knucks.hbs
@@ -5,8 +5,10 @@
 
     <div>
         <button {{action 'generateKnucks'}}>My Knucks</button>
+    </div>
 
-        <p>{{knucks}}</p>
+    <div class="knucks-area">
+            <p class="knucks">{{knucks}}</p>
     </div>
 
 </div>
